fixed background errors on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -456,20 +456,24 @@ a:after {
 
 /* Section Dividers Backgrounds */
 
-.parallax {
-  background-position: 50% 50%;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
+.dank:before {
+  content: "";
+  display: block;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -10;
+  background: url('../img/BevMaxCoke.jpg') no-repeat center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-size: cover;
 }
 
-.parallax-1 {
-	background-image: url('../img/BevMaxCoke.jpg')
-}
-
-
 .divider6 {
-	background-image: url('../img/bg/kans.jpg')
+	background-image: url('../img/bg/canz.jpg')
 }
 
 
